[gd_scene load_steps=16 format=2]

[ext_resource path="res://asserts/themes/正文字体.tres" type="Theme" id=1]
[ext_resource path="res://MarketList.gd" type="Script" id=2]
[ext_resource path="res://asserts/art/Book.png" type="Texture" id=3]
[ext_resource path="res://asserts/art/marketBackground.png" type="Texture" id=4]
[ext_resource path="res://asserts/themes/标题字体.tres" type="Theme" id=5]
[ext_resource path="res://asserts/art/hoverBox.png" type="Texture" id=6]
[ext_resource path="res://MarketScene.gd" type="Script" id=7]
[ext_resource path="res://asserts/art/downArrow.png" type="Texture" id=8]
[ext_resource path="res://MarketExitHoverBox.gd" type="Script" id=9]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[node name="MarketScene" type="Node2D"]
script = ExtResource( 7 )

[node name="Book" type="TextureRect" parent="."]
margin_right = 768.0
margin_bottom = 1072.0
texture = ExtResource( 3 )
expand = true

[node name="MarketBackground" type="TextureRect" parent="."]
margin_left = 768.0
margin_top = 8.0
margin_right = 1920.0
margin_bottom = 1072.0
texture = ExtResource( 4 )
expand = true

[node name="MarketList" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="ItemList" type="ItemList" parent="MarketList"]
margin_left = 96.0
margin_top = 320.0
margin_right = 672.0
margin_bottom = 960.0
theme = ExtResource( 1 )
custom_colors/guide_color = Color( 0.47451, 0.333333, 0.282353, 1 )
custom_colors/font_color = Color( 0.831373, 0.631373, 0.372549, 1 )
custom_constants/hseparation = 30
custom_styles/cursor = SubResource( 9 )
custom_styles/selected_focus = SubResource( 10 )
custom_styles/bg_focus = SubResource( 11 )
custom_styles/cursor_unfocused = SubResource( 12 )
custom_styles/selected = SubResource( 13 )
custom_styles/bg = SubResource( 14 )
max_text_lines = 2
max_columns = 3
same_column_width = true

[node name="Title" type="Label" parent="."]
margin_left = 288.0
margin_top = 96.0
margin_right = 488.0
margin_bottom = 171.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.47451, 0.333333, 0.282353, 1 )
text = "小镇集市"
align = 1
valign = 1

[node name="BuyButton" type="TextureButton" parent="."]
margin_left = 168.0
margin_top = 192.0
margin_right = 320.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( -784, -248 )
texture_normal = ExtResource( 6 )
expand = true

[node name="BuyButtonText" type="Label" parent="BuyButton"]
margin_right = 152.0
margin_bottom = 64.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.290196, 0.141176, 0.0627451, 1 )
text = "购买"
align = 1
valign = 1

[node name="SellButton" type="TextureButton" parent="."]
margin_left = 456.0
margin_top = 192.0
margin_right = 608.0
margin_bottom = 256.0
texture_normal = ExtResource( 6 )
expand = true

[node name="SellButtonText" type="Label" parent="SellButton"]
margin_right = 152.0
margin_bottom = 64.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.290196, 0.141176, 0.0627451, 1 )
text = "出售"
align = 1
valign = 1

[node name="ExitHoverBox" type="TextureRect" parent="."]
margin_left = 912.0
margin_top = 672.0
margin_right = 1032.0
margin_bottom = 720.0
texture = ExtResource( 6 )
expand = true
script = ExtResource( 9 )

[node name="ExitHoverText" type="Label" parent="ExitHoverBox"]
margin_right = 120.0
margin_bottom = 48.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.47451, 0.333333, 0.282353, 1 )
text = "离开集市"
align = 1
valign = 1

[node name="ExitArrow" type="TextureButton" parent="."]
margin_left = 888.0
margin_top = 632.0
margin_right = 1008.0
margin_bottom = 720.0
rect_rotation = 90.0
texture_normal = ExtResource( 8 )
expand = true
